--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 body {
-  min-width: 1122px;
-  min-height: 1750px;
-  margin: 0;
-  padding: 0;
+  min-width: 960px;
+  font-family: 'PT Sans Narrow', 'Arial', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
 
-  background: #000000 url("../img/barbershop-item.jpg") no-repeat 50% 3px;
-
+  background: #000000 url("../img/background.jpg") no-repeat center top;
 }
 
 .clearfix::after {
@@ -14,33 +16,97 @@ body {
   clear: both;
 }
 
-.main-header {
-  margin-bottom: 60px;
-}
-
 .container {
   width: 940px;
   padding: 0 10px;
   margin: 0 auto;
 }
 
+/* ===== HEADER ===== */
+.main-header {
+  margin-bottom: 57px;
+  color: #ffffff;
+  background-color: #000000;
+}
+
 .main-navigation {
   float: left;
   width: 780px;
-  min-height: 70px; /*Временно - потом удалить!*/
+}
+
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 25px 20px;;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.main-navigation a:hover {
+  background-color: #242424;
 }
 
 .user-block {
   float: right;
-  width: 140px;
-  min-height: 70px; /*Временно - потом удалить!*/
+  max-width: 140px;
 }
 
+.login {
+  position: relative;
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  vertical-align: top;
+}
+
+.login:hover {
+  background-color: #242424;
+}
+
+.login::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 20px;
+  width: 18px;
+  height: 18px;
+  background: url("../img/sprite.png") no-repeat;
+  background-position: -5px -5px;
+  opacity: 0.3;
+}
+
+.login:hover::before {
+  opacity: 1;
+}
+
+/* ===== MAIN CONTENT INDEX ===== */
 .index-logo {
   width: 368px;
   height: 204px;
   margin: 0 auto;
   margin-bottom: 25px;
+}
+
+.index-logo img {
+  width: 368px;
+  height: 204px;
 }
 
 .features {
@@ -51,35 +117,193 @@ body {
   float: left;
   width: 300px;
   margin-right: 20px;
-  min-height: 175px; /*Временно - потом удалить!*/
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-name {
+  position: relative;
+  display: block;
+  font-size: 30px;
+  line-height: 42px;
+  margin-bottom: 30px;
+  padding-bottom: 40px;
+}
+
+.features-item p {
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.features-name::after {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -10px;
+  display: block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+}
+
 .index-content {
   padding: 50px 80px;
   margin-bottom: 35px;
-  min-height: 330px; /*Временно - потом удалить!*/
+  color: #000000;
+  background: url("../img/line-shadow.png") no-repeat center, #f8f5f2 url("../img/pattern-white.jpg");
 }
 
 .index-content-left {
   float: left;
   width: 380px;
-  min-height: 330px; /*Временно - потом удалить!*/
 }
 
 .index-content-right {
   float: right;
   width: 300px;
-  min-height: 330px; /*Временно - потом удалить!*/
 }
 
+.index-content-title {
+  margin: 0;
+  margin-bottom: 25px;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+  padding-right: 35px;
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview p {
+  margin-bottom: 0;
+}
+
+.news-preview time {
+  text-transform: none;
+  font-weight: 400;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 33px;
+  margin-right: 16px;
+  font-family: 'PT Sans Narrow', 'Arial', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-decoration: none;
+  vertical-align: top;
+  text-align: center;
+  color: #ffffff;
+  background-color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+  background-color: #000000;
+}
+
+.gallery {
+  position: relative;
+  height: 260px;
+}
+
+.gallery-content {
+  margin: 0;
+  height: 164px;
+  border: 7px solid #ffffff;
+  background-color: #cccccc;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  width: 140px;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+  font-family: 'PT Sans Narrow', 'Arial', sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #000000;
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.appointment-form input:focus {
+  border: 2px solid #663d15;
+}
+
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
+}
+
+/* ===== FOOTER ===== */
 .main-footer {
   margin-top: 65px;
-  padding-top: 60px;
+  padding-top: 58px;
   padding-bottom: 40px;
+  color: #ffffff;
+  background: #252525 url("../img/pattern-black.jpg");
 }
 
 .main-footer-shadow {
@@ -89,22 +313,86 @@ body {
 .footer-contacts {
   float: left;
   width: 320px;
-  margin-right: 60px;
-  min-height: 90px; /*Временно - потом удалить!*/
+  margin-right: 80px;
+}
+
+.footer-contacts a {
+  color: #ffffff;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
 }
 
 .footer-social {
   float: left;
-  width: 180px;
-  min-height: 90px; /*Временно - потом удалить!*/
+  max-width: 180px;
+}
+
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+  background: #000000 url("../img/sprite.png") no-repeat center;
+
+  transition:
+    background-position 0.5s,
+    background-color 0.5s;
+}
+
+.social-btn-vk {
+  background-position: 5px -165px;
+}
+
+.social-btn-fb {
+  background-position: 12px -42px;
+}
+
+.social-btn-insta {
+  background-position: 7px -105px;
+}
+
+.social-btn-vk:hover {
+  background-color: #ffffff;
+  background-position: 5px -191px;
+}
+
+.social-btn-fb:hover {
+  background-color: #ffffff;
+  background-position: 12px -74px;
+}
+
+.social-btn-insta:hover {
+  background-color: #ffffff;
+  background-position: 7px -136px;
 }
 
 .footer-copyright {
   float: right;
-  width: 140px;
-  min-height: 90px; /*Временно - потом удалить!*/
+  max-width: 180px;
 }
 
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+/* ===== OTHER PAGES ===== */
 .inner-page-title {
   min-height: 70px; /*Временно - потом удалить!*/
   margin-bottom: 55px;
