--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   line-height: 24px;
   text-transform: uppercase;
   color: #ffffff;
-  background: #242424 url("../img/barbershop-shop.jpg") no-repeat center top;
+  background: #000000 url("../img/background.jpg") no-repeat center top;
 }
 
 .inner-page {
@@ -77,7 +77,7 @@ img {
   display: block;
   width: 111px;
   height: 20px;
-  padding-top: 22px;
+  padding-top: 23px;
 }
 
 .main-navigation .header-logo:hover {
@@ -636,7 +636,126 @@ img {
 .catalog-gallery {
   float: right;
   width: 700px;
-  min-height: 680px; /*Временно - потом удалить!*/
+}
+
+.gallery-items {
+  font-size: 0;
+  line-height: 0;
+  margin-bottom: 25px;
+}
+
+.gallery-item {
+  display: inline-block;
+  vertical-align: top;
+  width: 220px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+}
+
+.gallery-item:hover {
+  box-shadow: 5px 0 25px 0 rgba(0, 1, 1, 0.3);
+}
+
+.gallery-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.gallery-item img {
+  width: 220px;
+  height: 165px;
+}
+
+.gallery-item .item-description {
+  padding: 16px;
+}
+
+.gallery-item .category,
+.gallery-item .title {
+  margin: 0;
+  padding: 0;
+  display: block;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: none;
+  color: #000000;
+}
+
+.item-description > a {
+  text-decoration: none;
+}
+
+.item-buy {
+  font-size: 0;
+  line-height: 0;
+}
+
+.gallery-item .item-buy {
+  margin-top: 16px;
+}
+
+.item-buy .buy-price {
+  background-color: #e5e5e5;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 24px;
+  padding: 11px 0;
+  text-align: center;
+  vertical-align: middle;
+  width: 109px;
+}
+
+.item-buy .btn {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 24px;
+  margin: 0;
+  padding: 11px 0;
+  text-align: center;
+  vertical-align: middle;
+  width: 78px;
+}
+
+
+.catalog-paginator {
+  list-style: none;
+  font-size: 0;
+  line-height: 0;
+  margin: 0;
+  padding: 0;
+}
+.catalog-paginator li {
+  background-color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 24px;
+  margin-right: 7px;
+  padding: 11px 0;
+  text-align: center;
+  vertical-align: middle;
+  width: 43px;
+}
+
+.catalog-paginator li:last-child {
+  margin-right: 0;
+}
+
+.catalog-paginator li:hover {
+  background-color: #663d15;
+}
+
+.catalog-paginator a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.catalog-paginator .current,
+.catalog-paginator .current:hover {
+  background-color: #ffffff;
+  color: #000000;
+  cursor: default;
 }
 
 .item-content-left {
@@ -659,7 +778,7 @@ img {
   padding-top: 58px;
   padding-bottom: 40px;
   color: #ffffff;
-  background: #252525 url("../img/pattern-black.jpg");
+  background: url("../img/footer-shadow.png") repeat-x, #252525 url("../img/pattern-black.jpg");
 }
 
 .inner-page .main-footer {
