--- a/css/style.css
+++ b/css/style.css
@@ -724,34 +724,36 @@ img {
   margin: 0;
   padding: 0;
 }
+
 .catalog-paginator li {
-  background-color: #000000;
-  cursor: pointer;
   display: inline-block;
+  margin-right: 7px;
+  width: 43px;
   font-size: 14px;
   line-height: 24px;
-  margin-right: 7px;
-  padding: 11px 0;
+  background-color: #000000;
+  vertical-align: top;
   text-align: center;
-  vertical-align: middle;
-  width: 43px;
 }
 
 .catalog-paginator li:last-child {
   margin-right: 0;
 }
 
-.catalog-paginator li:hover {
-  background-color: #663d15;
-}
-
 .catalog-paginator a {
+  display: block;
+  box-sizing: border-box;
+  padding: 11px 0;
   color: #ffffff;
   text-decoration: none;
 }
 
-.catalog-paginator .current,
-.catalog-paginator .current:hover {
+.catalog-paginator a:hover {
+  background-color: #663d15;
+}
+
+.catalog-paginator .current {
+  padding: 11px 0;
   background-color: #ffffff;
   color: #000000;
   cursor: default;
