--- a/css/style.css
+++ b/css/style.css
@@ -765,17 +765,18 @@ img {
   width: 460px;
 }
 
-.item-content-left img {
-  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
-}
-
-.item-content-left img:hover {
-  box-shadow: 5px 0 25px 0 rgba(0, 1, 1, 0.3);
-}
-
 .main-picture {
   margin: 0;
   padding: 0;
+  width: 460px;
+  height: 498px;
+  background-color: #cccccc;
+  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+}
+
+.main-picture:hover,
+.preview-container a:hover {
+  box-shadow: 5px 0 25px 0 rgba(0, 1, 1, 0.3)
 }
 
 .main-picture img {
@@ -795,6 +796,10 @@ img {
   vertical-align: top;
   margin-right: 20px;
   margin-top: 20px;
+  width: 140px;
+  height: 149px;
+  background-color: #cccccc;
+  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .preview-container a:nth-child(3n) {
