--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@keyframes bounce {
+  0%   { transform: translateY(-2000px); }
+  70%  { transform: translateY(30px);    }
+  90%  { transform: translateY(-10px);   }
+  100% { transform: translateY(0);       }
+}
+
+@keyframes bounce-x {
+  0%   { transform: translateX(-5000px); }
+  70%  { transform: translateX(30px);    }
+  90%  { transform: translateX(-10px);   }
+  100% { transform: translateX(0);       }
+}
+
+@keyframes shake {
+  0%, 100%                { transform: translateX(0);     }
+  10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
+  20%, 40%, 60%, 80%      { transform: translateX(10px);  }
+}
+
 body {
   min-width: 960px;
   font-family: 'PT Sans Narrow', 'Arial', sans-serif;
@@ -968,6 +988,15 @@ img {
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
+.modal-content-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
 .modal-content-map {
   display: none;
   position: fixed;
@@ -983,6 +1012,11 @@ img {
   border: 7px solid #ffffff;
 }
 
+.modal-content-map-show {
+  display: block;
+  animation: bounce-x 0.6s;
+}
+
 .modal-overlay {
   position: fixed;
   display: none;
@@ -992,6 +1026,10 @@ img {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-overlay-show {
+  display: block;
 }
 
 .modal-content-close {
